# huruta_pendulum

./: LICENSE  README.md
huruta_pendulum_controller/: CMakeLists.txt  package.xml  pendulum_controller_plugins.xml
huruta_pendulum_controller/include/pendulum_control/: pendulum_controller.hpp
huruta_pendulum_controller/launch/: start_nrt_simu.launch
huruta_pendulum_controller/script/: compute_lqg.sce
huruta_pendulum_controller/src/: pendulum_controller.cpp
huruta_pendulum_description/: CMakeLists.txt  package.xml
huruta_pendulum_description/config/: huruta_control.yaml  joint_names_huruta_pendulum_description.yaml  pendulum_control.yaml
huruta_pendulum_description/launch/: display.launch  gazebo.launch  start_pendulum.launch
huruta_pendulum_description/meshes/: base_link.STL  base_motor.STL  pendulum.STL
huruta_pendulum_description/urdf/: huruta_pendulum_description.csv  huruta_pendulum_description.urdf
